# bullpen

./: Cargo.toml  LICENSE  README.md  flake.nix
examples/: Cargo.toml  create_chat_completion.rs  create_chat_completion_default.rs  create_chat_completion_stream.rs  create_completion.rs  create_completion_stream.rs  mf_chat.rs  mf_chat_stream.rs  mf_create_chat_completion.rs  ollama_completion.rs  ollama_embed.rs  pplx_chat.rs  pplx_chat_stream.rs  pplx_create_chat_completion.rs  pplx_create_chat_completion_stream.rs
examples/create_chat_completion/: Cargo.toml
examples/create_chat_completion/src/: main.rs
examples/create_chat_completion_default/: Cargo.toml
examples/create_chat_completion_default/src/: main.rs
examples/create_chat_completion_stream/: Cargo.toml
examples/create_chat_completion_stream/src/: main.rs
examples/create_embedding/: Cargo.toml
examples/create_embedding/src/: main.rs
src/: api.rs  error.rs  lib.rs  models.rs
src/endpoints/: mod.rs
src/endpoints/modelfarm/: chat.rs  completion.rs  embedding.rs
src/endpoints/ollama/: chat.rs  completion.rs  embedding.rs  mod.rs
src/endpoints/pplx/: chat.rs  completion.rs
src/resources/: mod.rs  shared.rs
src/resources/modelfarm/: chat.rs  chat_completion.rs  completion.rs  mod.rs
src/resources/ollama/: chat.rs  chat_completion.rs  completion.rs  embedding.rs  mod.rs
src/resources/pplx/: chat_completion.rs  chat_completion_stream.rs  completion.rs  completion_stream.rs
src/v1/: api.rs  models.rs
src/v1/endpoints/: chat.rs  completions.rs  mod.rs
src/v1/endpoints/modelfarm/: chat.rs  completion.rs  embedding.rs
src/v1/endpoints/ollama/: completion.rs  embedding.rs
src/v1/endpoints/pplx/: chat.rs  completion.rs
src/v1/resources/: chat_completion.rs  chat_completion_stream.rs  completion.rs  completion_stream.rs  mod.rs  shared.rs
src/v1/resources/modelfarm/: chat_completion.rs  embedding.rs  mod.rs
src/v1/resources/ollama/: completion.rs  embedding.rs
src/v1/resources/pplx/: chat_completion.rs  chat_completion_stream.rs  completion.rs  completion_stream.rs  mod.rs
