[package]
name = "pplx_client"
version = "0.2.13"
edition = "2021"
license = "MIT"
description = "Pplx Client is an unofficial async Rust library that allows you to interact with the Perplexity API."
repository = "https://github.com/kodylow/pplx_client"
documentation = "https://docs.rs/pplx_client"
keywords = ["async", "ai", "chatgpt"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "stream",
    "multipart",
] }
reqwest-eventsource = { version = "0.5.0", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = [] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", optional = true }
base64 = { version = "0.21", optional = true }
log = { version = "0.4", optional = true }

[features]
default = ["reqwest/default-tls"]
download = ["dep:futures", "dep:rand", "dep:base64"]
stream = ["dep:reqwest-eventsource", "dep:futures", "dep:tokio-stream"]
simple = []
rustls-tls = ["reqwest/rustls-tls"]

[lib]
doctest = false

[profile]

[profile.ci]
inherits = "dev"
incremental = false
debug = "line-tables-only"
lto = "off"
