[package]
name = "bullpen"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Bullpen: an unofficial library for the Pplx API and Replit Modelfarm."
repository = "https://github.com/kodylow/bullpen"
documentation = "https://docs.rs/bullpen"
keywords = ["async", "ai", "chatgpt"]

[dependencies]
reqwest = { version = "0.11.22", default-features = false, features = [
    "json",
    "stream",
    "multipart",
    "default-tls",
] }
reqwest-eventsource = { version = "0.5.0" }
futures = { version = "0.3.29" }
tokio = { version = "1.34.0", features = ['full'] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-stream = { version = "0.1.14" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
base64 = { version = "0.21.5" }
log = { version = "0.4.20" }
futures-util = "0.3.29"
dotenv = "0.15.0"
anyhow = "1.0.75"
thiserror = "1.0.50"

# [features]
# default = ["reqwest/default-tls"]
# download = ["dep:rand", "dep:base64"]
# stream = ["dep:reqwest-eventsource", "dep:tokio-stream"]
# simple = []
# rustls-tls = ["reqwest/rustls-tls"]

[lib]
doctest = false

[profile]

[profile.ci]
inherits = "dev"
incremental = false
debug = "line-tables-only"
lto = "off"
